# homework_10.1

./: .coverage  .env.example  .gitignore  README.md  func_log.txt  processing.py  pyproject.toml
data/: empty_transactions_excel.xlsx  transactions_excel.xlsx
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_sortis_py.html  z_145eef247bfb46b6_transactions_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_widget_py.html
new/: pyproject.toml
new/src1/: masks.py
src/: decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  sorting.py  sortis.py  transactions.py  utils.py  widget.py
src1/: masks.py  masks.py.isorted  widget.py
tests/: conftest.py  func_log.txt  test_decorators.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_transactions.py  test_utils.py  test_widget.py  tests_mask_card_number.py  tests_masks.py  tests_processing.py  tests_widget.py
