[tool.poetry]
name = "venv"
version = "0.1.0"
description = ""
authors = ["Okcana"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# максимальная длинна строки
line-length = 119
exclude = '''
(
  /(
      \.git
  )/
)
'''

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'








